<?xml version="1.0" encoding="utf-8"?>

			
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:stretchColumns="0">		
			
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
	
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
			<EditText
				android:id="@+id/result"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:focusable="false"
				android:text="0" />
		</LinearLayout>	
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
				<Button android:id="@+id/btn_1"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_1" />
				<Button android:id="@+id/btn_2"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_2" />
				<Button android:id="@+id/btn_3"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_3" />
		</LinearLayout>
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
				<Button android:id="@+id/btn_4"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_4" />
				<Button android:id="@+id/btn_5"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_5" />
				<Button android:id="@+id/btn_6"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_6" />
		</LinearLayout>
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
				<Button android:id="@+id/btn_7"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_7" />
				<Button android:id="@+id/btn_8"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_8" />
				<Button android:id="@+id/btn_9"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:onClick="myClickHandler"
					android:text="@string/btn_9" />
		</LinearLayout>
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
				<Button android:id="@+id/btn_clr"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:onClick="myClickHandler"
					android:text="@string/btn_clr" />
				<Button android:id="@+id/btn_0"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="3"
					android:onClick="myClickHandler"
					android:text="@string/btn_0" />
				<Button android:id="@+id/btn_ok"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:onClick="myClickHandler"
					android:text="@string/btn_ok" />
		</LinearLayout>
	</TableRow>
			
	<TableRow
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<View 
			android:layout_width="fill_parent"
			android:layout_height="3dip"
			android:background="#666666"></View>		
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
				<Button android:id="@+id/btn_plus"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:onClick="myClickHandler"
					android:text="@string/btn_plus" />
				<Button android:id="@+id/btn_minus"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:onClick="myClickHandler"
					android:text="@string/btn_minus" />
		</LinearLayout>
	</TableRow>

	<TableRow
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
				<Button android:id="@+id/btn_to_converter"
					android:layout_column="1"
					android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:onClick="myClickHandler"
					android:text="@string/btn_to_converter" />
		</LinearLayout>
	</TableRow>

			
</TableLayout>
