<?xml version="1.0" encoding="utf-8"?>

			
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:stretchColumns="0">		
			
			<TableRow
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent">
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"

				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent" >
					<EditText
						android:id="@+id/result"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="0" />
				</LinearLayout>	
			</TableRow>
			
			<TableRow
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent">
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					>
				
						<Button
							android:layout_column="1"
							android:gravity="left"
							android:layout_height="wrap_content"
							android:layout_width="0dp"
							android:layout_weight="4"
							android:text="@string/btn_clr" />
						<Button
							android:gravity="center_horizontal"
							android:layout_height="wrap_content"
							android:layout_width="0dp"
							android:layout_weight="3"
							android:text="@string/btn_0" />
						<Button
							android:gravity="right"
							android:layout_height="wrap_content"
							android:layout_width="0dp"
							android:layout_weight="4"
							android:text="@string/btn_ok" />
					
				</LinearLayout>
			</TableRow>
			
</TableLayout>
